[package]
name = "better-ls"
version = "1.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
owo-colors = "4.2.1" 
strum = { version = "0.28", features = ["derive"] }
strum_macros = "0.28"
tabled = "0.21.0"
